Add header args.

--- a/README.org
+++ b/README.org
@@ -1,1 +1,3 @@
 #+TITLE: Examples of CRUD in MongoDB using the pymongo Python module
+#+PROPERTY: header-args :session *shell mongodb* :results silent raw
+
