--- a/README.org
+++ b/README.org
@@ -5,6 +5,7 @@
   - [[#system-environment][System environment]]
   - [[#install-pymongo][Install pymongo]]
   - [[#docker-container][Docker container]]
+    - [[#dockerfile][Dockerfile]]
     - [[#build-image][Build image]]
 
 ** System environment
@@ -20,6 +21,13 @@ pip install pymongo==3.11.3
 #+END_SRC
 
 ** Docker container
+*** Dockerfile
+
+#+BEGIN_SRC conf :tangle Dockerfile
+FROM python:3.9.1-buster
+RUN pip install pymongo==3.11.3
+#+END_SRC
+
 *** Build image
 
 #+BEGIN_SRC sh
