--- a/README.org
+++ b/README.org
@@ -6,7 +6,7 @@
   - [[#install-pymongo][Install pymongo]]
   - [[#docker-container][Docker container]]
     - [[#dockerfile][Dockerfile]]
-    - [[#build-image][Build image]]
+    - [[#build-the-image][Build the image]]
 
 ** System environment
 
@@ -28,7 +28,7 @@ FROM python:3.9.1-buster
 RUN pip install pymongo==3.11.3
 #+END_SRC
 
-*** Build image
+*** Build the image
 
 #+BEGIN_SRC sh
 docker build -t python-pymongo-usage .
