Change title Find data.

--- a/README.org
+++ b/README.org
@@ -11,7 +11,7 @@
   - [[#select-the-database][Select the database]]
   - [[#select-the-collection][Select the collection]]
   - [[#insert-data][Insert data]]
-  - [[#read-data][Read data]]
+  - [[#find-data][Find data]]
   - [[#docker-container][Docker container]]
     - [[#dockerfile][Dockerfile]]
     - [[#build-the-image][Build the image]]
@@ -95,7 +95,7 @@ doc = {
 collection.insert_one(doc)
 #+END_SRC
 
-** Read data
+** Find data
 
 #+BEGIN_SRC python
 cursor = collection.find({})
