--- a/README.org
+++ b/README.org
@@ -12,6 +12,7 @@
   - [[#select-the-collection][Select the collection]]
   - [[#insert-data][Insert data]]
   - [[#find-data][Find data]]
+    - [[#find-all][Find all]]
   - [[#docker-container][Docker container]]
     - [[#dockerfile][Dockerfile]]
     - [[#build-the-image][Build the image]]
@@ -97,6 +98,7 @@ collection.insert_one(doc)
 #+END_SRC
 
 ** Find data
+*** Find all
 
 #+BEGIN_SRC python
 cursor = collection.find({})
