--- a/README.org
+++ b/README.org
@@ -24,6 +24,7 @@
   - [[#print-cursor-data][Print cursor data]]
   - [[#update-documents][Update Documents]]
     - [[#update-operator][Update operator]]
+    - [[#update-one][Update one]]
   - [[#docker-container][Docker container]]
     - [[#dockerfile][Dockerfile]]
     - [[#build-the-image][Build the image]]
@@ -210,6 +211,12 @@ update_operator = {
     "$set": {"size.uom": "cm", "status": "P"},
     "$currentDate": {"lastModified": True}
 }
+#+END_SRC
+
+*** Update one
+
+#+BEGIN_SRC python
+collection.update_one(query, update_operator)
 #+END_SRC
 
 ** Docker container
