--- a/README.org
+++ b/README.org
@@ -27,6 +27,8 @@
     - [[#update-one][Update one]]
     - [[#update-many][Update many]]
     - [[#replace-documents][Replace documents]]
+  - [[#delete-documents][Delete Documents]]
+    - [[#delete-one][Delete one]]
   - [[#docker-container][Docker container]]
     - [[#dockerfile][Dockerfile]]
     - [[#build-the-image][Build the image]]
@@ -231,6 +233,14 @@ collection.update_many(query, update_operator)
 
 #+BEGIN_SRC python
 collection.replace_one(query, doc)
+#+END_SRC
+
+** Delete Documents
+
+*** Delete one
+
+#+BEGIN_SRC python
+collection.delete_one(query)
 #+END_SRC
 
 ** Docker container
