--- a/README.org
+++ b/README.org
@@ -210,7 +210,7 @@ for doc in cursor:
 #+END_SRC
 
 ** Update Operators
-*** Ses the value of a field to current date
+*** Set the value of a field to current date
 
 #+BEGIN_SRC python
 update_operator = {
